Fix production logout and auto-login issues
- Change staleTime from Infinity to 0 in queryClient to prevent infinite caching
- Add cacheTime: 0 to prevent query caching after logout
- Change refetchOnMount to true to always get fresh user state
- Add cache-control meta tags in index.html to prevent browser caching
- Update vercel.json headers for better cache control on production
- Add specific headers for index.html to prevent caching
- Allow assets to be cached for better performance
- Ensure fresh data is always fetched on page load in production

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Prevent caching to ensure fresh data after logout -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Soccer Hunters - منصة تسويق لاعبين ومدربين كرة القدم</title>
     <link
       rel="icon"
